[package]
name = "mini_leb128"
version = "0.1.1" # update html_root_url in src/lib.rs and version in README.md

authors = ["Sean C. Roach <me@seancroach.dev>"]
categories = ["encoding", "no-std"]
description = "A minimal library to read and write integers encoded using LEB128."
edition = "2021"
keywords = ["io", "leb128", "vlq", "zero-copy"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/seancroach/mini_leb128"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
zc_io = { version = "0.2", default-features = false }
